--- a/src/components/layouts/layouts.module.scss
+++ b/src/components/layouts/layouts.module.scss
@@ -17,6 +17,6 @@
   }
 
   main.darkMode {
-    background-color: colors.$GRAY7;
+    background-color: colors.$GRAY8;
   }
 }
